--- a/m_library/templates/404.html
+++ b/m_library/templates/404.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -24,17 +25,17 @@
 
     <!-- Favicon
     ================================================== -->
-    <link rel="apple-touch-icon" sizes="180x180" href="../staticfiles/img/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="../staticfiles/img/favicon.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="{% static 'img/apple-touch-icon.png' %}">
+    <link rel="icon" type="image/png" sizes="16x16" href="{% static 'img/favicon.jpg' %}">
 
     <!-- Stylesheets
     ================================================== -->
     <!-- Bootstrap core CSS -->
-    <link href="../staticfiles/css/bootstrap.min.css" rel="stylesheet">
+    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="../staticfiles/css/style.css" rel="stylesheet">
-    <link href="../staticfiles/css/responsive.css" rel="stylesheet">
+    <link href="{% static 'css/style.css' %}" rel="stylesheet">
+    <link href="{% static 'css/responsive.css' %}" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -58,21 +59,24 @@
             <div class="collapse navbar-collapse" id="agency-navbar-collapse">
 
                 <ul class="nav navbar-nav navbar-right">
+                    <li><a href="#">Library</a></li>
+                    <li><a href="#">Blog</a></li>
 
-                    <li class="active"><a href="index.html" data-toggle="dropdown">Home</a></li>
-                    <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Pages<i
+                    <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Add<i
                             class="fa fa-caret-down hidden-xs" aria-hidden="true"></i></a>
 
                         <ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
-                            <li><a href="portfolio.html">Portfolio</a></li>
-                            <li><a href="blog.html">Blog</a></li>
+                            <li><a href="#">Add book</a></li>
+                            <li><a href="#">Add blog post</a></li>
                         </ul>
 
-                    </li>
-                    <li><a href="../portfolio.html">Portfolio</a></li>
-                    <li><a href="blog.html">Blog</a></li>
-                    <li><a href="contact.html">Contact</a></li>
-                    <li><a href="ui-elements.html">UI Elements</a></li>
+                    <li><a href="#">Profile</a></li>
+                    <!-- if user is logged in  -->
+                    <li><a href="#">Sign Out</a></li>
+
+                    <!-- else  -->
+                    <li><a href="#">Sign In</a></li>
+                    <li><a href="#">Sign Up</a></li>
 
                 </ul>
 
