--- a/m_library/templates/accounts/delete-profile.html
+++ b/m_library/templates/accounts/delete-profile.html
@@ -4,11 +4,17 @@
     <div class="row mt-40">
         <div class="col-md-8 col-md-offset-2">
             <h2 class="text-center heading-separator">Are you sure you want to delete your profile?</h2>
+
+            <form method="post" action="{% url 'delete profile' pk=object.pk %}">
+                {{ form }}
             <div class="text-center mt-20">
-                <a href="#" class="btn btn-fill mb-10">Button</a>
+                <button class="btn btn-green">Delete</button>
+                <a class="btn btn-primary" href="javascript:history.back()">
+                    <button class="btn btn-green">Go back</button></a>
             </div>
+                {% csrf_token %}
 
-
+            </form>
         </div>
     </div>
 {% endblock %}
