--- a/m_library/templates/accounts/profile-details.html
+++ b/m_library/templates/accounts/profile-details.html
@@ -1,4 +1,5 @@
 {% extends 'base/base_profile.html' %}
+{% load static %}
 {% block page_content %}
 
 
@@ -7,7 +8,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-7">
-                    <img src="../../staticfiles/img/default.png" class="wdn-stretch rounded-corners" alt="">
+                    <img src="{{ object.avatar.url }}" class="wdn-stretch rounded-corners" alt="">
                 </div>
 
                 <div class="col-sm-5">
@@ -18,16 +19,15 @@
 
                                 <h3>Username</h3>
                                 <ul class="list-unstyled">
-                                    <li>Sydney, Australia</li>
-                                    <li>100 Mainstreet Center</li>
+                                    <li>{{ object.username }}</li>
                                 </ul>
 
                                 <h3>Full Name</h3>
-                                <a href="mailto:pixelperfectmk@gmail.com" target="_blank">pixelperfectmk@gmail.com</a>
-
-                                <!--                                <h3>Fax</h3>-->
-                                <!--                                <p>(208) 333 9296</p>-->
+                                <ul class="list-unstyled">
+                                    <li>{{ object.get_full_name }}</li>
+                                </ul>
                             </div>
+
                         </div>
                     </div><!-- /.contact-info -->
 
@@ -69,8 +69,8 @@
 
         <div class="text-center mt-20">
             <div class="col-sm-12">
-                <a href="#" class="btn btn-fill mb-10">Edit profile</a>
-                <a href="#" class="btn btn-green mb-10">Delete profile</a>
+                <a href="{% url 'edit profile' pk=request.user.pk  %}" class="btn btn-fill mb-10">Edit profile</a>
+                <a href="{% url 'delete profile' pk=request.user.pk  %}" class="btn btn-green mb-10">Delete profile</a>
             </div>
         </div><!-- /.buttons -->
 
