--- a/m_library/templates/accounts/sign-in.html
+++ b/m_library/templates/accounts/sign-in.html
@@ -1,35 +1,46 @@
 {% extends 'base/base_profile.html' %}
+{% load class_filter %}
 {% block page_content %}
 
-<div class="row mt-40">
-    <div class="col-md-8 col-md-offset-2">
-        <h2 class="text-center heading-separator">Sign In</h2>
-        <form>
-            <div class="row">
-                <div class="col-sm-15">
-                    <div class="form-group">
-                        <label for="name">Username:</label>
-                        <input type="username" class="form-control" id="username">
-                    </div>
+    <div class="row mt-40">
+        <div class="col-md-8 col-md-offset-2">
+            <h2 class="text-center heading-separator">Sign In</h2>
+
+            <form method="post" action="{% url 'sign in' %}">
+                <div class="row">
 
                     <div class="col-sm-15 mt-20">
                         <div class="form-group">
-                            <label for="name">Password:</label>
-                            <input type="password" class="form-control" id="password">
+                            <label for="name">Username:</label>
+
+                            {{ form.username|add_class:'form-control' }}
+                            {{ form.username.errors }}
                         </div>
+
+
+                        <div class="col-sm-15 mt-20">
+                            <div class="form-group">
+                                <label for="name">Password:</label>
+
+                                {{ form.password|add_class:'form-control' }}
+                                {{ form.password.errors }}
+                            </div>
+                        </div>
+
                     </div>
 
                     <div class="text-center mt-20">
+                        {#                        <input type="hidden" name="next" value="{{ next }}">#}
                         <button class="btn btn-green">Sign In</button>
+                        {% csrf_token %}
+                    </div>
+
+                    <div class="col-sm-15 mt-20">
                     </div>
                 </div>
+            </form>
+        </div>
 
-                <div class="col-sm-15 mt-20">
-                </div>
-            </div>
-        </form>
-    </div>
-
-</div><!-- /.form -->
+    </div><!-- /.form -->
 
 {% endblock %}
