--- a/m_library/templates/common/home.html
+++ b/m_library/templates/common/home.html
@@ -61,24 +61,30 @@
                 <ul class="nav navbar-nav navbar-right">
 
 
-                    <li><a href="#">Library</a></li>
-                    <li><a href="#">Blog</a></li>
+                    <li><a href="{% url 'all books' %}">Library</a></li>
+                    <li><a href="{% url 'blog' %}">Blog</a></li>
+
+                    {% if request.user.is_authenticated %}
 
                     <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Add<i
                             class="fa fa-caret-down hidden-xs" aria-hidden="true"></i></a>
 
                         <ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
-                            <li><a href="#">Add book</a></li>
-                            <li><a href="#">Add blog post</a></li>
+                            <li><a href="{% url 'add book' %}">Add book</a></li>
+                            <li><a href="{% url 'add post' %}">Add blog post</a></li>
                         </ul>
 
-                    <li><a href="#">Profile</a></li>
+                    <li><a href="{% url 'profile details' pk=request.user.pk  %}">Profile</a></li>
                     <!-- if user is logged in  -->
-                    <li><a href="#">Sign Out</a></li>
+                    <li><a href="{% url 'sign out' %}">Sign Out</a></li>
+
+                    {% else %}
 
                     <!-- else  -->
-                    <li><a href="#">Sign In</a></li>
-                    <li><a href="#">Sign Up</a></li>
+                    <li><a href="{% url 'sign in' %}">Sign In</a></li>
+                    <li><a href="{% url 'sign up' %}">Sign Up</a></li>
+
+                    {% endif %}
 
                 </ul>
 
@@ -91,10 +97,10 @@
 <div id="hero" class="hero overlay">
     <div class="hero-content">
         <div class="hero-text">
-            <h1>#</h1>
-            <p>#</p>
-            <a href="#" class="btn btn-border">All books</a>
-            <a href="#" class="btn btn-border">Blog</a>
+            <h1>Find your ebooks here!</h1>
+            <p></p>
+            <a href="{% url 'all books' %}" class="btn btn-border">All books</a>
+            <a href="{% url 'blog' %}" class="btn btn-border">Blog</a>
         </div><!-- /.hero-text -->
     </div><!-- /.hero-content -->
 </div><!-- /.hero -->
