functionality to books views

--- a/m_library/templates/accounts/sign-in.html
+++ b/m_library/templates/accounts/sign-in.html
@@ -30,7 +30,7 @@
                     </div>
 
                     <div class="text-center mt-20">
-                        {#                        <input type="hidden" name="next" value="{{ next }}">#}
+                        <input type="hidden" name="next" value="{{ next }}">
                         <button class="btn btn-green">Sign In</button>
                         {% csrf_token %}
                     </div>
