--- a/m_library/templates/books/delete-book.html
+++ b/m_library/templates/books/delete-book.html
@@ -1,13 +1,48 @@
 {% extends 'base/base_library.html' %}
+{% load class_filter %}
 {% block page_content %}
-    <div class="row mt-40">
-        <div class="col-md-8 col-md-offset-2">
-            <h2 class="text-center heading-separator">Are you sure you want to delete this book?</h2>
-            <div class="text-center mt-20">
-                <a href="#" class="btn btn-fill mb-10">Button</a>
+
+    <div class="col-md-8 col-md-offset-2">
+        <h2 class="text-center heading-separator">Are you sure you want to delete this book?</h2>
+        <form method="post" action="{% url 'delete book' pk=pk %}">
+            <div class="row">
+                <div class="col-sm-15 mt-20">
+                    <div class="form-group">
+                        <label for="name">*Title</label>
+                        {{ form.title|add_class:'form-control' }}
+
+                        <label for="email">*Author</label>
+                        {{ form.author|add_class:'form-control' }}
+
+                        <label for="name">*Genre</label>
+                        {{ form.genre|add_class:'form-control' }}
+
+                        <label for="name">*Language</label>
+                        {{ form.language|add_class:'form-control' }}
+
+                        <label for="name">*Description</label>
+                        {{ form.description|add_class:'form-control' }}
+
+                        <label for="name">Cover</label>
+                        {{ form.cover|add_class:'form-control' }}
+
+                        <label for="name">*Upload book file</label>
+                        {{ form.book_file|add_class:'form-control' }}
+
+                    </div>
+                </div>
             </div>
 
+            <div class="text-center mt-20">
+                <button class="btn btn-fill mb-10">Delete</button>
 
-        </div>
+                <a href="javascript:history.back()">
+                    <button class="btn btn-fill mb-10">Go back</button>
+                </a>
+                {% csrf_token %}
+            </div>
+        </form>
     </div>
+
+
 {% endblock %}
